responses for both plugins don't attempt to handle non-text messages